# minecraft-rs

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: rust.yml
codec/: Cargo.toml
codec-macros/: Cargo.toml
codec-macros/src/: dec.rs  enc.rs  lib.rs
codec/src/: lib.rs  prefixed_option.rs  uuid.rs  var_int.rs  var_long.rs
codec/src/dec/: decode.rs  error.rs  mod.rs
codec/src/enc/: encode.rs  error.rs  mod.rs
data/: Cargo.toml
data/src/: lib.rs  packet.rs
data/src/model/: handshake.rs  login.rs  mod.rs
proxy/: Cargo.toml
proxy/src/: error.rs  main.rs
proxy/src/utils/: mod.rs
server/: Cargo.toml
server/src/: error.rs  handshake.rs  login.rs  main.rs  status.rs
