[workspace]
members = ["codec", "codec-macros", "data", "proxy"]
resolver = "2"

[workspace.package]
edition = "2024"
publish = false

[workspace.lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# use alloc and core instead of std
alloc_instead_of_core = "forbid"
std_instead_of_alloc = "forbid"
std_instead_of_core = "forbid"

# always use expect instead of unwrap
unwrap_used = "deny"

# deny floating point arithmetic
float_arithmetic = "deny"

# other lints
allow_attributes_without_reason = "deny"
missing_assert_message = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
self_named_module_files = "deny"
semicolon_outside_block = "deny"
single_char_lifetime_names = "deny"
str_to_string = "deny"
string_lit_chars_any = "deny"
string_to_string = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"

[workspace.dependencies]
codec = { path = "codec" }
codec-macros = { path = "codec-macros" }
data = { path = "data" }

clap = "4.5.46"
env_logger = "0.11.8"
flate2 = "1.1.2"
json = "0.12.4"
log = "0.4.27"
