[package]
name = "codec-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"

[dev-dependencies]
codec = { path = "../codec" }

[lints]
workspace = true
