[package]
name = "proxy"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
codec.workspace = true
data.workspace = true

clap = { workspace = true, features = ["derive", "env"] }
env_logger.workspace = true
json.workspace = true
log.workspace = true

[lints]
workspace = true
